Oauth protected resource and auth server metadata endpoints working

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "tsx src/index.ts",
     "dev": "tsx --watch src/index.ts",
     "dev:tunnel": "npm run dev & npm run tunnel",
-    "tunnel": "cloudflared tunnel --url http://localhost:${PORT:-3000} --hostname ${TUNNEL_HOSTNAME}",
+    "tunnel": "dotenv -- sh -c 'echo TUNNEL_HOSTNAME=${TUNNEL_HOSTNAME} && cloudflared tunnel --url http://localhost:${PORT:-3000} --hostname ${TUNNEL_HOSTNAME}'",
     "build": "tsc",
     "docker:build": "docker build -t mcp-scratchpad .",
     "docker:run": "docker run --env-file .env -p 3000:3000 mcp-scratchpad",
@@ -45,6 +45,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "dotenv-cli": "^9.0.0",
     "eslint": "^9.31.0",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
