--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Server Configuration
 PORT=3000
-APP_BASE_URL=https://mcp-scratchpad.example.com
+APP_BASE_URL=https://mcp-scratchpad.trycloudflare.com
 
 # Azure AD Configuration
 AZURE_TENANT_ID=72f988bf-86f1-41af-91ab-2d7cd011db47
